created model in TicTacToeGame class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Tic Tac Toe MVC</string>
+    <string name="x_turn">X Turn</string>
+    <string name="o_turn">O Turn</string>
+    <string name="x_win">X Wins!</string>
+    <string name="o_win">O Wins!</string>
+    <string name="tie_game">Tie Game!</string>
+
+
 </resources>
