created TicTacToe view in the activity_main.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="x_win">X Wins!</string>
     <string name="o_win">O Wins!</string>
     <string name="tie_game">Tie Game!</string>
+    <string name="new_game">New Game</string>
+    <string name="space"> </string>
 
 
 </resources>
